--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="/css/bootstrap-icons.css" rel="stylesheet"><link href="/css/bootstrap.min.css" rel="stylesheet"><link rel="icon" href="/favicon.ico"><title>wallet</title><link rel="stylesheet/less" type="text/css" href="/css/styles.less"><script src="http://localhost:18000/cfg"></script><script>less = {
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="/css/bootstrap-icons.css" rel="stylesheet"><link href="/css/bootstrap.min.css" rel="stylesheet"><link rel="icon" href="/favicon.ico"><title>wallet</title><link rel="stylesheet/less" type="text/css" href="/css/styles.less"><script src="/cfg"></script><script>less = {
         javascriptEnabled: true
       }</script><script src="/js/less.js"></script><style>html,
       body {
